# heavymetal

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
docs/: ANALYSIS.md  FORMATS.md  INTERFACES.md  TECHNICAL.md
src/client/: cl_cgame.c  cl_input.c  cl_main.c  console.c  keys.c
src/collision/: cm_local.h  cm_main.c
src/common/: alias.c  alias.h  cg_public.h  fakk_types.h  g_public.h  pk3.c  pk3.h  q_math.c  q_math.h  q_shared.c  q_shared.h  qcommon.h  qfiles.h  str.cpp  str.h
src/engine/: cmd.c  common.c  cvar.c  files.c  main.c  msg.c  net.c  sys_sdl.c  win32_compat.h
src/ghost/: ghost.h  ghost_main.c
src/renderer/: r_bsp.c  r_gl.c  r_gl.h  r_light.c  r_main.c  r_model.c  r_shader.c  r_sky.c  r_surface.c  tr_types.h
src/script/: script.h  script_main.c  script_vm.c
src/server/: sv_game.c  sv_main.c  sv_world.c
src/sound/: snd_local.h  snd_main.c  snd_sdl.c
src/tiki/: tiki.h  tiki_anim.c  tiki_main.c  tiki_parse.c  tiki_skel.c
tools/: pe_analyze.py  pk3_inspect.py
